force-app/main/default/objects/Interest_Reserves__c/Interest_Reserves__c.object-meta.xml
<CustomObject>
    <label>Interest Reserve</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Interest Reserves Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Reserves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>