force-app/main/default/objects/Interest_Reserves__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interest Reserves</relationshipLabel>
    <relationshipName>Interest_Reserves</relationshipName>
    <type>Lookup</type>
</CustomField>