force-app/main/default/objects/Interest_Reserves__c/fields/InvestorLoanID__c.field-meta.xml
<CustomField>
    <fullName>InvestorLoanID__c</fullName>
    <description>Yardi ID on Property</description>
    <inlineHelpText>Yardi ID on Property</inlineHelpText>
    <label>InvestorLoanID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>