force-app/main/default/objects/Interest_Reserves__c/fields/New_Remaining_Interest_Reserve__c.field-meta.xml
<CustomField>
    <fullName>New_Remaining_Interest_Reserve__c</fullName>
    <label>New Remaining Interest Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>