force-app/main/default/objects/Interest_Reserves__c/fields/Original_Interest_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Original_Interest_Reserves__c</fullName>
    <label>Original Interest Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>