force-app/main/default/objects/Interest_Reserves__c/fields/Remaining_Interest_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Interest_Reserve__c</fullName>
    <inlineHelpText>Remaining Interest Reserve Before Payment</inlineHelpText>
    <label>Remaining Interest Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>