force-app/main/default/objects/Interest_Reserves__c/fields/SBLoanID__c.field-meta.xml
<CustomField>
    <fullName>SBLoanID__c</fullName>
    <description>Servicer Loan Number on Property</description>
    <inlineHelpText>Servicer Loan Number on Property</inlineHelpText>
    <label>SBLoanID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>